@@ -554,7 +554,7 @@
 				<label for="hideBGImage">Hide background image <i>(for color schemes where applicable)</i></label>
 				<br>
 				<input id="tooltipsInRightColumn" type="checkbox" onclick="gamePage.opts.tooltipsInRightColumn = $('#tooltipsInRightColumn')[0].checked; gamePage.ui.updateOptions();">
-				<label for="tooltipsInRightColumn">Move tooltips in right column <i>(do NOT deactivate it with Sleek, the result is weird and needs to be fixed)</i></label>
+				<label for="tooltipsInRightColumn">Move tooltips in right column</label>
 				<br>
                 <br>
 
